Created a New Functionality

--- a/app/views/items/index1.html.erb
+++ b/app/views/items/index1.html.erb
@@ -19,7 +19,7 @@
 <div class ='legend'>
  
 
-<%= link_to index1_path do %>
+<%= link_to root_path do %>
 
 <div class = 'legend1'>
 
@@ -35,17 +35,17 @@
 <%= link_to index3_path do%>
 <div class = 'legend3'>
 <strong>Color_code:3</strong>
-<% end %>
+<%end %>
 </div>
 <%= link_to index4_path do%>
 <div class = 'legend4'>
 <strong>Color_code:4</strong>
-<% end %>
+<%end%>
 </div>
 <%= link_to index5_path do%>
 <div class = 'legend5'>
 <strong>Color_code:5</strong>
-<% end %>
+<%end%>
 </div>
 
 
