--- a/app/views/items/index2.html.erb
+++ b/app/views/items/index2.html.erb
@@ -27,7 +27,7 @@
 <% end %>
 </div>
 
-<%= link_to index2_path do %>
+<%= link_to items_path do %>
 <div class = 'legend2'>
   <strong>Color_code:2</strong>
   <% end %>
@@ -35,7 +35,7 @@
 <%= link_to index3_path do%>
 <div class = 'legend3'>
 <strong>Color_code:3</strong>
-<% end %>
+<%end%>
 </div>
 <%= link_to index4_path do%>
 <div class = 'legend4'>
@@ -45,7 +45,7 @@
 <%= link_to index5_path do%>
 <div class = 'legend5'>
 <strong>Color_code:5</strong>
-<% end %>
+<%end%>
 </div>
 
 
