--- a/app/views/items/index5.html.erb
+++ b/app/views/items/index5.html.erb
@@ -42,7 +42,7 @@
 <strong>Color_code:4</strong>
 <% end %>
 </div>
-<%= link_to index5_path do%>
+<%= link_to items_path do %>
 <div class = 'legend5'>
 <strong>Color_code:5</strong>
 <% end %>
