--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -2,6 +2,12 @@
 
 :root{
     --bg-color: rgb(226, 222, 222);
+    --lg1-color: #ea5954;
+    --lg2-color: #105670;
+    --lg3-color: #97a64c;
+    --lg4-color: #1d8b96;
+    --lg5-color: #2aad8d;
+    
 }
 
 
@@ -39,24 +45,24 @@
     grid-template-rows: auto; */
      /* border:2px solid; */
     height:auto;
-    width: 1600px;;
-    row-gap: 80px;
-    column-gap: 80px;
-    margin-left: 100px;
+    width:auto;
+    row-gap: 50px;
+    column-gap: 10px;
+    margin-left: 110px;
     margin-right: 50px;     
     position: relative; 
     margin-top: 20px; 
 } 
 .blogs a{
-  /* position: relative; */
-  /* bottom: 10; */
-  /* right: 0; */
-  /* border: 2px solid; */
-  /* background-color: rgb(15, 128, 52);  */
-  /* padding-top: 5px;
-  margin-bottom: 15px;
-  text-align: end; */
-    /* margin-top: 3px;   */
+//   /* position: relative; */
+//   /* bottom: 10; */
+//   /* right: 0; */
+//   /* border: 2px solid; */
+//   /* background-color: rgb(15, 128, 52);  */
+//   /* padding-top: 5px;
+//   margin-bottom: 15px;
+//   text-align: end; */
+//     /* margin-top: 3px;   */
    text-decoration: none; 
     color: rgb(2, 9, 14);
 
@@ -77,6 +83,8 @@
 overflow-y: scroll;
 background-color: white;
   /* margin-top:22px; */
+  color: #a2a2a4;
+  position: relative;
  }
  
  .indexinner::-webkit-scrollbar{
@@ -96,7 +104,7 @@ background-color: white;
      height:250px
  }      
  .indexinner a{
-     position: relative;
+    //  position: relative;
      bottom: 10;
      right: 0;
      /* border: 2px solid; */
@@ -113,22 +121,22 @@ background-color: white;
     overflow:scroll;
 }
 .parent{
-  position: relative;
+  // position: relative;
 }
-.child1{
-  /* position: absolute; */
-  right: 13px;
-  top: 2px;
-  background-color: rgb(38, 141, 46);
-  border-radius: 2px;
-  border: 2px solid;
-  height: 20px;
-  width: 30px;
-}
+// .child1{
+//   /* position: absolute; */
+//   right: 13px;
+//   top: 2px;
+//   background-color: rgb(38, 141, 46);
+//   border-radius: 2px;
+//   border: 2px solid;
+//   height: 20px;
+//   width: 30px;
+// }
 .child{
   display: flex;
   justify-content: end;
-  column-gap: 5px;
+  column-gap: 0px;
   margin-right: 10px;
   /* position: absolute; */
 
@@ -136,71 +144,93 @@ background-color: white;
 }
 .legend{
   display: flex;
-  column-gap: 170px;
-  margin-left: 155px;
-  position:absolute;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: auto;
+  height: auto;
+  // position: relative;
+    // margin-left: 30px;
+  // position:absolute;
+}
+
+.legend a{
+  text-decoration: none; 
+  color: rgb(2, 9, 14);
 }
 .legend1{
-  background-color: blue;
+  background-color: var(--lg1-color);
   border-radius: 0px 0 15px 15px;
-  border: 2px solid;
-  height: 40px;
-  width: 170px;
+//  border: 2px solid;
+  height: auto;
+  width: 10%;
   padding-top: 5px;
   text-align: center;
+  overflow-y: scroll;
   /* margin-left: 481px; */
   /* font-size: 27px; */
 }
-
+.legend1::-webkit-scrollbar{
+  width:0;
+  display: none;;
+}
 .legend2{
-  background-color: rgb(23, 199, 81);
+  background-color: var(--lg2-color);
   border-radius: 0px 0 15px 15px;
-  border: 2px solid;
+  // border: 2px solid;
   height: 40px;
-  width: 170px;
+  // width: 170px;
+  width: 10%;
   padding-top: 5px;
   text-align: center;
-  margin-left: -40px ;
+  overflow-x:hidden;
+  // margin-left: -40px ;
 }
 
 .legend3{
 
-  background-color: rgb(192, 31, 179);
+  background-color: var(--lg3-color);
   border-radius: 0px 0 15px 15px;
-  border: 2px solid;
+  // border: 2px soid;
   height: 40px;
-  width: 170px;
+  // width: 170px;
+  width: 10%;
   padding-top: 5px;
   text-align: center;
+  overflow-x: hidden;
   /* margin-left: -55px; */
 }
 .legend4{
-  background-color: rgb(10, 6, 3);
+  background-color: var(--lg4-color);
   border-radius: 0px 0 15px 15px;
-  border: 2px solid;
+  // border: 2px solid;
   height: 40px;
-  width: 170px;
+  // width: 170px;
+  width: 10%;
   color: white;
   text-align: center;
   padding-top: 5px;
+  overflow-x: hidden;
   /* margin-left: -20px; */
  
 }
 .legend5{
-  background-color: rgb(184, 121, 6);
+  background-color: var(--lg5-color);
   border-radius: 0px 0 15px 15px;
 
-  border: 2px solid;
+  // border: 2px solid;
   height: 40px;
-  width: 170px;
+  // width: 170px;
+  width: 10%;
   padding-top: 5px;
   text-align: center;
+  overflow-x: hidden;
+  // font-size:
   /* margin-left: - 20px; */
 }
 .a{
   /* margin-right: 0px; */
   top: 2px;
-  background-color: blue;
+  background-color: var(--lg1-color);
   border-radius: 10px 10px 0px 0px;
   /* border: 2px solid; */
   height: 20px;
@@ -211,7 +241,7 @@ background-color: white;
 .b{
   right: 3px;
   top: 2px;
-  background-color:rgb(23, 199, 81);;
+  background-color:#135671;
   border-radius: 10px 10px 0px 0px;
   /* border: 2px solid; */
   height: 20px;
@@ -222,7 +252,7 @@ background-color: white;
 }
 .c{ right: 13px;
   top: 2px;
-  background-color:rgb(192, 31, 179);
+  background-color:var(--lg3-color);
   border-radius: 10px 10px 0px 0px;
   /* border: 2px solid; */
   height: 20px;
@@ -233,7 +263,7 @@ background-color: white;
 
   right: 0px;
   top: 2px;
-  background-color:black;
+  background-color: var(--lg4-color);
   border-radius: 10px 10px 0px 0px;
   /* border: 2px solid; */
   height: 20px;
@@ -248,7 +278,7 @@ background-color: white;
 
   right: 0px;
   top: 2px;
-  background-color: rgb(184, 121, 6);
+  background-color: var(--lg5-color);
   border-radius: 10px 10px 0px 0px;
   /* border: 2px solid; */
   height: 20px;
@@ -257,61 +287,83 @@ background-color: white;
 }
 .title{
   text-align: center; 
-  /* position: absolute; */
-  margin-left: 48px;  
-  // justify-content: center;
-  box-shadow: 0px 6px 2px ;
-    
+  // position: absolute; 
+  margin-left: 101px;  
+  justify-content: center;
+  // align-items:center;
+  box-shadow: 0px 6px 2px ;    
   padding-bottom: 25px;
   height: auto;
-  margin-right: 2px;
-  padding-left: 60px;
+  width: auto;
+  margin-right: 8%;
+  // padding-top: -15px;
+  // padding-left: 80px;
 //   background-color:;
+  display:flex ;
+color:#7e7e7e;
 
 }
 .total{
-  background-color: var(--bg-color);
+  background-color: #e5e6ea;
   // margin: 40px;
   margin-top: 0px;
-  margin-left: 45px;
-  padding-bottom: 40px;
+  margin-right: 8%;
+  margin-left: 100px;
+  padding-bottom:  40px;
+  // width: fit-content;
+  // width: max-content ;
   // width: 1500px;
+  // padding-left: 50px;
+  // position: relative;
 }
+
+
 
 .number{
-  margin-left: 315px;
-  margin-right: 800px;
-  font-size: 130px;
-  position: absolute;
-  margin-top: -34px;
+  
+  font-size: 150px;
+  
+  // margin-top: 35px;
+  
+  font-size: 100px;
+  
+  width: fit-content;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+  
 }
 .bias1{
-  margin-left: 600px;
+  // margin-left: 600px;
   
-  margin-top: 21px;
-  margin-left: 480px;
-  position: absolute;
+  margin-top: 23px;
+  // margin-left: 102px;
+  // position: relative;
   font-size: 40px;
+  width: fit-content;
+  // padding-left: 20px;
+  // margin-bottom: 20px;
 }
 .bias2{
-  margin-top: 5px;
-  margin-left: 863px;
+  margin-top: -87px;
+  // margin-left: 709px;
   font-size: 28px;
   margin-right: 100px;
-  position: absolute;
+  // position: relative;
 
 }
 
-.bias3{
-  margin-top: 51px;
-  margin-left: -123px;
+.bias3{ 
+  margin-top: -100  px;
+  margin-left: 120px;
   font-size: 26px;
+  width: auto;
+  // position: relative;
+  margin-bottom: 20px;
 }
 .descriptionbox{
   height:100px;
   overflow-y: scroll;
   text-align: center;
-  text-align: center;
+  
   /* margin-left: ; */
 }
 .descriptionbox::-webkit-scrollbar{
@@ -321,7 +373,8 @@ background-color: white;
 .name{
 
 text-align: center;
-font-size: larger;
+font-size: 25px;
+color: #7c7c7c;
 
 }
 
@@ -332,5 +385,15 @@ font-size: larger;
   }
   .all{
 
-    position: absolute;
+     position: relative;
+  }
+ @media screen and (max-width: 800px){
+    .blogs{
+      margin-left: 10px;
+      width: fit-content;
+    }
+  }
+  .h1{
+    margin-top: 90px;
+    width: fit-content;
   }
