--- a/app/views/items/index3.html.erb
+++ b/app/views/items/index3.html.erb
@@ -32,7 +32,7 @@
   <strong>Color_code:2</strong>
   <% end %>
 </div>
-<%= link_to index3_path do%>
+<%= link_to items_path do%>
 <div class = 'legend3'>
 <strong>Color_code:3</strong>
 <% end %>
@@ -40,12 +40,12 @@
 <%= link_to index4_path do%>
 <div class = 'legend4'>
 <strong>Color_code:4</strong>
-<% end %>
+<%end%>
 </div>
 <%= link_to index5_path do%>
 <div class = 'legend5'>
 <strong>Color_code:5</strong>
-<% end %>
+<%end%>
 </div>
 
 
