--- a/app/views/items/index4.html.erb
+++ b/app/views/items/index4.html.erb
@@ -35,12 +35,12 @@
 <%= link_to index3_path do%>
 <div class = 'legend3'>
 <strong>Color_code:3</strong>
-<% end %>
+<%end%>
 </div>
-<%= link_to index4_path do%>
+<%= link_to items_path do%>
 <div class = 'legend4'>
 <strong>Color_code:4</strong>
-<% end %>
+<%end %>
 </div>
 <%= link_to index5_path do%>
 <div class = 'legend5'>
